Introduce app routing and news/article module. New article section created

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,1 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<!--<div class="header-wrapper"><app-header></app-header></div>-->
-<div class="main-content-wrapper container">
-  <app-news-pane></app-news-pane>
-</div>
+<router-outlet></router-outlet>
