--- a/src/app/module/articles/articles.component.css
+++ b/src/app/module/articles/articles.component.css
@@ -1,12 +1,14 @@
-.news-pane {
-  margin: 60px 0;
+.articles-panel {
+  display: flex;
+  flex-flow: row wrap;
+  margin-top: 30px;
 }
 
-.news-pane-title {
-  width: 20%;
-}
-
-.news-pane-title span {
-  font-weight: bold;
-  font-size: 35px;
+.article-item {
+  margin: 2% 1%;
+  background-color: #fff;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  width: 30%;
+  height: 420px;
 }
