--- a/src/app/module/articles/articles.component.html
+++ b/src/app/module/articles/articles.component.html
@@ -1,3 +1,3 @@
-<div class="news-pane">
-    <app-news-list articleType="2"></app-news-list>
+<div class="articles-panel">
+    <app-article-detail class="article-item" *ngFor="let article of articles" [article]="article"></app-article-detail>
 </div>
