Added video section

--- a/src/app/module/articles/component/article-detail/article.detail.component.html
+++ b/src/app/module/articles/component/article-detail/article.detail.component.html
@@ -17,7 +17,7 @@
         }}</a>
             </div>
             <div class="article-pubdate">
-                <span>{{ article.pubTime | localDateTime}}</span>
+                <span>{{ article.pubTime | date:'medium'}}</span>
             </div>
         </div>
     </div>
