--- a/src/app/module/news/component/news-detail/news-detail.component.html
+++ b/src/app/module/news/component/news-detail/news-detail.component.html
@@ -17,7 +17,7 @@
         }}</a>
       </div>
       <div class="news-pubdate">
-        <span>{{ news.pubTime | localDateTime }}</span>
+        <span>{{ news.pubTime | date:'medium' }}</span>
       </div>
     </div>
   </div>
