--- a/src/app/module/tweets/tweets.component.html
+++ b/src/app/module/tweets/tweets.component.html
@@ -1,7 +1,7 @@
 <div class="tweets">
     <div class="tweet" *ngFor="let tweet of tweets">
         <div class="tweet-headline"><img [src]="tweet.publisher.profilePicture" />{{tweet.publisher.userName}} -
-            {{ tweet.createdAt | localDateTime }}</div>
+            {{ tweet.createdAt | date:'medium' }}</div>
         <div class="tweet-content"><a target="_blank" [href]="tweet.url">{{tweet.text}}</a></div>
     </div>
 </div>
