--- a/src/app/module/reddit/reddit.component.css
+++ b/src/app/module/reddit/reddit.component.css
@@ -1,11 +1,11 @@
-.videos{
+.posts{
     display: flex;
     flex-direction: column;
     padding: 0px 40px;
     margin: 40px 0px;
 }
 
-.video{
+.post{
     background-color: white;
     width: calc(100% -120px);
     border-radius: 25px;
@@ -19,7 +19,7 @@
 
 
 
-.video-headline{
+.post-headline{
     width:100%;
     margin-bottom: 10px;
     font-style: italic;
@@ -32,42 +32,33 @@
 
 
 
-.video A {
+.post A {
     text-decoration: none;
     color: black;
 }
 
-.video A:visited{
+.post A:visited{
     color: black;
 }
 
-.video IMG {
-    width:200px;
-    height:112.5;
-    border-radius: 25px;
-    position: relative;
 
-    top:10px;
+
+.post-content{
+   
 }
 
-.video-content{
-    margin-bottom: 10px;
-}
-
-.video-content-main{
+.post-content-main{
     margin-left: 20px;
     width: calc(100% - 200px - 20px);
 }
 
-.video-content-title{
-    padding-top:20px;
+.post-content-title{
+    
     font-size: 1.2rem;
-    margin-bottom:20px;
 }
 
-.video-content{
+.post-content{
     width:100%;
-    margin-bottom: 10px;
     display: flex;
     flex-direction: row;
 }
